    - Dungeon hexes no longer contribute to the total trades found, preventing from quickly completing the "Find Some Trades" quest.
    - Removed the map colors of hexlights and hexports.
    - The item selector for trade contents in the trade overview now only shows items that can be found in trades.
    - Made the tooltips for the sink and generator buttons more concise.
  Gui:
    - Horizontally centered the "Bonuses" text in the catalog.
  Bugfixes:
    - Fixed crash when viewing red star ranked items if your character is missing (in editor mode, god mode, etc.).
    - Fixed crash when trying to sell the item stack in your hand at the Quantum Bazaar when nothing is held.
    - Fixed hexlights and hexports remaining after hex core deletion.
    - Fixed hexlights causing collision clipping at the corners of hex cores.
    - Fixed missing localization for inserter capacity in the item buffs.
    - Fixed resource patches floating over marsh tiles on Gleba.
    - Fixed scaling bugs in UI across different display scales.
    - Fixed broken rich text in item tooltips of quest rewards when questbook is viewed from space.
    - Added the missing value for iron ore on Fulgora.
        This was fixed by including the concrete recycling recipe as well as other common recycling recipes in the item value solver.
        As a result, the extra iron obtained from concrete and electronic circuits has shifted the relative item values drastically.
  Optimizations:
    - Decreased batch sizes and processing intervals, smoothing gameplay on large saves.
---------------------------------------------------------------------------------------------------
Version: 1.2.1
Date: 27/11/25
  Features:
    - Hex cores now emit flying text when they make a trade.  Can be disabled in the mod's player settings.
    - Hex cores now emit light, the color of which reacts to circuit signals.
        Default colors adjustable in mod settings!