@@ -17,6 +17,8 @@ Date: 5/12/25
     - Removed the map colors of hexlights and hexports.
     - The item selector for trade contents in the trade overview now only shows items that can be found in trades.
     - Made the tooltips for the sink and generator buttons more concise.
+    - Due to game engine performance issues on saves with thousands of trades showing in the trade overview, the maximum is now 250 total trades to be shown.
+        This does not affect filtering or which trades are searched; it only keeps you from lagging the game with more UI elements than you could ever need.
   Gui:
     - Horizontally centered the "Bonuses" text in the catalog.
   Bugfixes:
